// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionItem renders a cosmos-sdk/MsgBeginRedelegate transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <begin-redelegate-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgCreateValidator transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <create-validator-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgDelegate transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <delegate-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgDeposit transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <deposit-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgEditValidator transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <edit-validator-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgMultiSend transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <multi-send-message-details-stub
      class="tx-caption"
      sessionaddress="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgSend transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <send-message-details-stub
      class="tx-caption"
      sessionaddress="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgSetWithdrawAddress transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <set-withdraw-address-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgSubmitProposal transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <submit-proposal-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgUndelegate transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <undelegate-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgUnjail transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <unjail-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgVote transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <vote-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a cosmos-sdk/MsgWithdrawDelegationReward transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <div
      class="toggle-box"
    >
      <i
        class="material-icons toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
     
    <withdraw-delegation-reward-message-details-stub
      class="tx-caption"
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;
